# painn-jax

./: .gitignore  .pylintrc  README.md  main_nbody.py  main_qm9.py  pyproject.toml  requirements.txt  setup.cfg  validate.py
experiments/: __init__.py  requirements.txt  train.py
experiments/nbody/: __init__.py  datasets.py  requirements.txt  train.py  utils.py
experiments/nbody/data/: generate_dataset.py
experiments/qm9/: __init__.py  requirements.txt  train.py  utils.py
painn_jax/: __init__.py  blocks.py  cutoff.py  painn.py  radial.py
